--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to beautiful <%= title %></p>
   </body>
 </html>
