--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 <div class = "body">
     <div class="navigation">
         <ul>
-            <li>Page</li>
+            <li><a href=<%"/users/"+userId%>> Page </a></li>
             <li>Invations</li>
             <li>Flashmobs</li>
             <li>Message</li>
@@ -28,16 +28,6 @@
         </ul>
     </div>
     <div class="page">
-
+    <%-body %>
     </div>
 </div>
-
-
-
-
-
-
-</body>
-
-</html>
-
