--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head></head>
-<body>
-Some text here
+<% layout('/layout') %>
+
 <form id="forma1" method="post">
     Email: <input type="text" name="email" id="username"> <br>
     Password: <input type="text" name="password" id="password"> <br>
@@ -13,8 +10,3 @@ Some text here
     <input type="submit" id="submit" value="Sign up">
 </form>
 
-</body>
-
-</html>
-
-<html>
