Use Denys' layout
Apply it for registration

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,12 +1,14 @@
 <% layout('/layout') %>
 
-<form id="forma1" method="post">
-    Email: <input type="text" name="email" id="username"> <br>
-    Password: <input type="text" name="password" id="password"> <br>
-    Confirm Password: <input type="text" name="passwordConfirmation" id="password"> <br>
-    Name: <input type="text" name="name" id="username"> <br>
-    Surname: <input type="text" name="surname" id="username"> <br>
+<div class="maincont">
+    <form id="forma1" method="post">
+        Email: <input type="text" name="email" id="username"> <br>
+        Password: <input type="text" name="password" id="password"> <br>
+        Confirm Password: <input type="text" name="passwordConfirmation" id="password"> <br>
+        Name: <input type="text" name="name" id="username"> <br>
+        Surname: <input type="text" name="surname" id="username"> <br>
 
-    <input type="submit" id="submit" value="Sign up">
-</form>
+        <input type="submit" id="submit" value="Sign up">
+    </form>
+</div>
 
