--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,37 +6,12 @@
 </head>
 <body>
 
-<header class = "header">
-    <div class="emblem">FLASHMOBS</div>
-    <div class="login">
         <form id="forma1" method="post">
-            Login: <input type="text" name="login" id="username">
-            Password: <input type="password" name="password" id="password">
+            Login: <input type="text" name="login" id="username"><br>
+            Password: <input type="password" name="password" id="password"><br>
             <input type="submit" id="submit" value="Sign in">
         </form>
-    </div>
-</header>
-
-<div class = "body">
-    <div class="navigation">
-        <ul>
-            <li>Page</li>
-            <li>Invations</li>
-            <li>Flashmobs</li>
-            <li>Message</li>
-            <li>Settings</li>
-        </ul>
-    </div>
-    <div class="page">
-
-    </div>
-</div>
-
-
-
-
-
-
+<a href="/registration">registration</a>
 </body>
 
 </html>
