--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,11 +1,8 @@
-<% layout('/layout') %>
-
 <form id="forma1" method="post">
+    Login: <input type="text" name="login" id="username"> <br>
     Email: <input type="text" name="email" id="username"> <br>
     Password: <input type="text" name="password" id="password"> <br>
     Confirm Password: <input type="text" name="passwordConfirmation" id="password"> <br>
-    Name: <input type="text" name="name" id="username"> <br>
-    Surname: <input type="text" name="surname" id="username"> <br>
 
     <input type="submit" id="submit" value="Sign up">
 </form>
