Fix charset in layout.ejs

--- a/views/NewDesign/layout.ejs
+++ b/views/NewDesign/layout.ejs
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Перший</title>
+		<title>РџРµСЂС€РёР№</title>
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
@@ -82,26 +82,26 @@
 			<!-- login zone-->
 			<form  method="get" id="searchform" action="#">
 				<div>				
-					<input type="text" placeholder="Логін" name="s" class="login" onfocus="defaultInput(this)" />
-					<input type="password" placeholder="Пароль" name="s" class="login" onfocus="defaultInput(this)" />
-					<div class="login_manage"> <a href="index_logged.html">Вхід</a> | <a href="index.html">Забув пароль</a> | <a href="index.html">Реєстрація</a> </div>
+					<input type="text" placeholder="Р›РѕРіС–РЅ" name="s" class="login" onfocus="defaultInput(this)" />
+					<input type="password" placeholder="РџР°СЂРѕР»СЊ" name="s" class="login" onfocus="defaultInput(this)" />
+					<div class="login_manage"> <a href="index_logged.html">Р’С…С–Рґ</a> | <a href="index.html">Р—Р°Р±СѓРІ РїР°СЂРѕР»СЊ</a> | <a href="index.html">Р РµС”СЃС‚СЂР°С†С–СЏ</a> </div>
 				</div>
 			</form>
 			<!-- ENDS login zone-->
 						
 			<!-- Navigation -->
 			<ul id="nav" class="sf-menu sf-vertical">
-				<li class="current-menu-item"><a href="index.html">ГОЛОВНА</a></li>
-				<li><a href="flashmobs.html">ФЛЕШМОБИ</a>
+				<li class="current-menu-item"><a href="index.html">Р“РћР›РћР’РќРђ</a></li>
+				<li><a href="flashmobs.html">Р¤Р›Р•РЁРњРћР‘Р</a>
 					<ul>
-						<li><a href="flashmobs.html">Пошук...</a>
-						<li><a href="flashmobs.html">Мої флешмоби</a>
-						<li><a href="flashmobs.html">Мої запрошення</a>
-						<li><a href="flashmobs.html">Минулі флешмоби</a>
-						<li><a href="flashmobs.html">Заплановані флешмоби</a>
+						<li><a href="flashmobs.html">РџРѕС€СѓРє...</a>
+						<li><a href="flashmobs.html">РњРѕС— С„Р»РµС€РјРѕР±Рё</a>
+						<li><a href="flashmobs.html">РњРѕС— Р·Р°РїСЂРѕС€РµРЅРЅСЏ</a>
+						<li><a href="flashmobs.html">РњРёРЅСѓР»С– С„Р»РµС€РјРѕР±Рё</a>
+						<li><a href="flashmobs.html">Р—Р°РїР»Р°РЅРѕРІР°РЅС– С„Р»РµС€РјРѕР±Рё</a>
 					</ul>
 				</li>
-				<li><a href="skins.html">МОЇ ПОВІДОМЛЕННЯ</a></li>
+				<li><a href="skins.html">РњРћР‡ РџРћР’Р†Р”РћРњР›Р•РќРќРЇ</a></li>
 			</ul>
 			<!-- Navigation -->						
 		</div>
