Fix source links

--- a/views/flashmobPage.ejs
+++ b/views/flashmobPage.ejs
@@ -37,7 +37,7 @@
                     <!-- ENDS meta -->
                     <!-- feature image -->
                     <div class="feature-image">
-                        <img src="NewDesign/img/dummies/584x300.jpg" alt="Feature image" />
+                        <img src="/img/dummies/584x300.jpg" alt="Feature image" />
                     </div>
                     <!-- ENDS feature image -->
                     <!-- single post -->
@@ -83,18 +83,18 @@
                         <!-- img gallery -->
                         <div>
                             <ul class="blocks-gallery">
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
-                                <li><a href="NewDesign/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="NewDesign/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
+                                <li><a href=/img/dummies/584x300.jpg" class="border fancybox" title="An image"><img src="/img/dummies/114x86.jpg" alt="Post" /></a></li>
                             </ul>
                         </div>
                         <!-- ENDS img gallery -->
@@ -115,7 +115,7 @@
                     <div class="block">
                         <!-- feature image -->
                         <div class="map-image">
-                            <a href="#"><img src="NewDesign/img/dummies/map.jpg" alt="Feature image" /></a>
+                            <a href="#"><img src="/img/dummies/map.jpg" alt="Feature image" /></a>
                         </div>
                         <!-- ENDS feature image -->
                     </div>
@@ -140,7 +140,7 @@
                                 <table>
                                     <tbody>
                                     <tr>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
                                         <td></td>
                                         <td></td>
                                         <td></td>
@@ -157,9 +157,9 @@
                                 <table>
                                     <tbody>
                                     <tr>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
                                         <td></td>
                                     </tr>
                                     </tbody>
@@ -174,22 +174,22 @@
                                 <table>
                                     <tbody>
                                     <tr>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
                                     </tr>
                                     <tr>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
                                     </tr>
                                     <tr>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
-                                        <td><a href='profile.html' class='url'><img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
+                                        <td><a href='profile.html' class='url'><img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />Lorem ipsum</a></td>
                                     </tbody>
                                 </table>
                                 <!-- ENDS table -->
@@ -234,7 +234,7 @@
                 <ol class="comments-list">
                     <li>
                         <div class="comment-wrap">
-                            <img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />
+                            <img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />
                             <div class="comments-right">
                                 <div class="meta-date">20 листопада, 2014 @ 19:19</div>
                                 <div><a href='profile.html' class='url'><strong>Адмін</strong></a></div>
@@ -245,7 +245,7 @@
                     </li>
                     <li>
                         <div class="comment-wrap">
-                            <img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />
+                            <img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />
                             <div class="comments-right">
                                 <div class="meta-date">20 листопада, 2014 @ 19:19</div>
                                 <div><a href='profile.html' class='url'><strong>Адмін</strong></a></div>
@@ -256,7 +256,7 @@
                     </li>
                     <li>
                         <div class="comment-wrap">
-                            <img alt='avatar' src='NewDesign/img/dummies/avatar.jpg' class='avatar' />
+                            <img alt='avatar' src='/img/dummies/avatar.jpg' class='avatar' />
                             <div class="comments-right">
                                 <div class="meta-date">20 листопада, 2014 @ 19:19</div>
                                 <div><a href='profile.html' class='url'><strong>Адмін</strong></a></div>
