--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,68 +5,68 @@
 		<title>Перший</title>
 		
 		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="css/social-icons.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/css/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/css/social-icons.css" type="text/css" media="screen" />
 	
 		<!-- THEME -->
-		<link rel="stylesheet" href="skins/paper-brown/style.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/skins/paper-brown/style.css" type="text/css" media="screen" />
 		
 		<!-- JS -->
-		<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-		<script type="text/javascript" src="js/jqueryui.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
-		<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
-		<script type="text/javascript" src="js/quicksand.js"></script>
-		<script type="text/javascript" src="js/custom.js"></script>
+		<script type="text/javascript" src="/js/jquery-1.5.1.min.js"></script>
+		<script type="text/javascript" src="/js/jqueryui.js"></script>
+		<script type="text/javascript" src="/js/easing.js"></script>
+		<script type="text/javascript" src="/js/jquery.scrollTo-1.4.2-min.js"></script>
+		<script type="text/javascript" src="/js/quicksand.js"></script>
+		<script type="text/javascript" src="/js/custom.js"></script>
 		
 		<!-- superfish -->
-		<link rel="stylesheet" media="screen" href="css/superfish.css" /> 
-		<link rel="stylesheet" media="screen" href="css/superfish-left.css" /> 
-		<script type="text/javascript" src="js/superfish-1.4.8/js/hoverIntent.js"></script>
-		<script type="text/javascript" src="js/superfish-1.4.8/js/superfish.js"></script>
-		<script type="text/javascript" src="js/superfish-1.4.8/js/supersubs.js"></script>
+		<link rel="stylesheet" media="screen" href="/css/superfish.css" />
+		<link rel="stylesheet" media="screen" href="/css/superfish-left.css" />
+		<script type="text/javascript" src="/js/superfish-1.4.8/js/hoverIntent.js"></script>
+		<script type="text/javascript" src="/js/superfish-1.4.8/js/superfish.js"></script>
+		<script type="text/javascript" src="/js/superfish-1.4.8/js/supersubs.js"></script>
 		<!-- ENDS superfish -->
 		
 		<!-- poshytip -->
-		<link rel="stylesheet" href="js/poshytip-1.0/src/tip-twitter/tip-twitter.css" type="text/css" />
-		<link rel="stylesheet" href="js/poshytip-1.0/src/tip-yellowsimple/tip-yellowsimple.css" type="text/css" />
-		<script type="text/javascript" src="js/poshytip-1.0/src/jquery.poshytip.min.js"></script>
+		<link rel="stylesheet" href="/js/poshytip-1.0/src/tip-twitter/tip-twitter.css" type="text/css" />
+		<link rel="stylesheet" href="/js/poshytip-1.0/src/tip-yellowsimple/tip-yellowsimple.css" type="text/css" />
+		<script type="text/javascript" src="/js/poshytip-1.0/src/jquery.poshytip.min.js"></script>
 		<!-- ENDS poshytip -->
 		
 		<!-- Tweet -->
-		<link rel="stylesheet" href="css/jquery.tweet.css" media="all"  type="text/css"/> 
-		<script src="js/tweet/jquery.tweet.js" type="text/javascript"></script> 
+		<link rel="stylesheet" href="/css/jquery.tweet.css" media="all"  type="text/css"/>
+		<script src="/js/tweet/jquery.tweet.js" type="text/javascript"></script>
 		<!-- ENDS Tweet -->
 		
 		<!-- Fancybox -->
-		<link rel="stylesheet" href="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+		<link rel="stylesheet" href="/js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
 		<!-- ENDS Fancybox -->
 		
 		<!-- jflickrfeed -->
-		<link href="css/jflickrfeed.css" rel="stylesheet" type="text/css" media="screen" /> 
-		<script src="js/jflickrfeed/jflickrfeed.js"></script>
+		<link href="/css/jflickrfeed.css" rel="stylesheet" type="text/css" media="screen" />
+		<script src="/js/jflickrfeed/jflickrfeed.js"></script>
 		
-		<link href="js/jflickrfeed/colorbox/colorbox.css" rel="stylesheet" type="text/css" media="screen" /> 
-		<script src="js/jflickrfeed/colorbox/jquery.colorbox.js"></script>
+		<link href="/js/jflickrfeed/colorbox/colorbox.css" rel="stylesheet" type="text/css" media="screen" />
+		<script src="/js/jflickrfeed/colorbox/jquery.colorbox.js"></script>
 		<!-- ENDS jflickrfeed -->
 		
 		<!-- prettyPhoto -->
-		<script type="text/javascript" src="js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-		<link rel="stylesheet" href="js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
+		<link rel="stylesheet" href="/js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
 		<!-- ENDS prettyPhoto -->
 		
 		<!-- GOOGLE FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 				
 		<!-- Nivo slider -->
-		<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
-		<script src="js/nivo-slider/jquery.nivo.slider.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="/css/nivo-slider.css" type="text/css" media="screen" />
+		<script src="/js/nivo-slider/jquery.nivo.slider.js" type="text/javascript"></script>
 		<!-- ENDS Nivo slider -->
 		
 		<!-- tabs -->
-		<link rel="stylesheet" href="css/tabs.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="js/tabs.js"></script>
+		<link rel="stylesheet" href="/css/tabs.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/js/tabs.js"></script>
   		<!-- ENDS tabs -->	
 		<!-- ENDS JS -->
 	</head>
@@ -77,7 +77,7 @@
 		<!-- SIDEBAR -->
 		<div id="sidebar">
 			<!-- logo -->
-			<a href="index.html"><img src="img/logo.png" alt="Left template" id="logo" /></a>
+			<a href="index.html"><img src="/img/logo.png" alt="Left template" id="logo" /></a>
 						
 			<!-- login zone-->
 			<form  method="post" id="searchform" action="#">
@@ -91,7 +91,7 @@
 						
 			<!-- Navigation -->
 			<ul id="nav" class="sf-menu sf-vertical">
-				<li class="current-menu-item"><a href="index.html">ГОЛОВНА</a></li>
+				<li class="current-menu-item"><a href="../">ГОЛОВНА</a></li>
 				<li><a href="flashmobs.html">ФЛЕШМОБИ</a>
 					<ul>
 						<li><a href="flashmobs.html">Пошук...</a>
