пофиксил баг с регистрацией

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -97,7 +97,7 @@
                 <li class="current-menu-item"><a href="/exit">ВИХІД</a></li>
             </ul>
             <% } else{ %>
-                <form  method="post" id="searchform" action="#">
+                <form  method="post" id="searchform" action="/">
                     <div>
                         <input type="text" placeholder="Логін" name="login" class="login" onfocus="defaultInput(this)" />
                         <input type="password" placeholder="Пароль" name="password" class="login" onfocus="defaultInput(this)" />
