Use location field instead of country and city
Views have only location, but model had two fields: country and city,
and on reigstration, data was saved to field 'country', but on
displaying profile, data was received from field 'city'. Fixed that by
removin both fields and replacing them with one field 'location'.

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,7 +61,7 @@
 						</tr>
 						<tr>
 							<td>Місце проживання</td>
-							<td><%-user.city%></td>
+							<td><%-user.location%></td>
 						</tr>
 						<tr>
 							<td>Мої захоплення</td>
