--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -61,7 +61,7 @@
 						</tr>
 						<tr>
 							<td>Місце проживання</td>
-							<td><%-user.city%></td>
+							<td><%-user.location%></td>
 						</tr>
 						<tr>
 							<td>Мої захоплення</td>
