Revert "Use location field instead of country and city"
This reverts commit 5495ee00c199c650b92e6fa336b640428c73f017.
Change location to country&city

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,8 +60,12 @@
 							<td><%-user.sex%></td>
 						</tr>
 						<tr>
-							<td>Місце проживання</td>
-							<td><%-user.location%></td>
+							<td>Країна проживання</td>
+							<td><%-user.country%></td>
+						</tr>
+						<tr>
+							<td>Місто проживання</td>
+							<td><%-user.city%></td>
 						</tr>
 						<tr>
 							<td>Мої захоплення</td>
