--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -59,8 +59,12 @@
 							<input name="sex"  class="noposhy" value="M" type="radio"/>Чоловік <input name="sex"  value="T" class="noposhy" type="radio"/>Жінка
 						</div>
 						<div>
-							<label>Місце проживання</label>
-							<input name="location"  id="location" type="text" class="form-poshytip" title="Введіть своє місце проживання"/>
+							<label>Країна проживання</label>
+							<input name="country"  id="country" type="text" class="form-poshytip" title="Введіть свою країну"/>
+						</div>
+						<div>
+							<label>Місто</label>
+							<input name="city"  id="city" type="text" class="form-poshytip" title="Введіть своє місто"/>
 						</div>
 						<br>
 						<div>
@@ -109,13 +113,13 @@
 					<p id="error" class="warning">Message</p>
 				</form>
 				<p id="success" class="success">Дякуємо за регістрацію.</p>
-				<!-- ENDS form -->	
-					
+				<!-- ENDS form -->
+
 				</div>
 				<!-- ENDS PAGE-CONTENT -->
-			
+
 			</div>
 			<!-- ENDS CONTENT -->
-			
+
 		</div>
 		<!-- ENDS MAIN -->
