--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -86,6 +86,7 @@
                 <li class="current-menu-item"><a href=<%-"/users/"+session.userId%>>ПРОФІЛЬ</a></li>
                 <li><a href="flashmobs.html">ФЛЕШМОБИ</a>
                     <ul>
+                        <li><a href="/createflashmob">Новий флешмоб </a>
                         <li><a href="flashmobs.html">Пошук...</a>
                         <li><a href="flashmobs.html">Мої флешмоби</a>
                         <li><a href="flashmobs.html">Мої запрошення</a>
