Fix select fields

--- a/views/flashmobs_create.ejs
+++ b/views/flashmobs_create.ejs
@@ -61,29 +61,26 @@
 						</div>
 						<div>
 							<label>Редагування інформації</label>
-							<select name="editrightsInfo" class="form-poshytip" title="Оберіть хто зможе редагувати інформацію про флешмоб"/>
-								<option value="superMod">Головні модератори</option>
-								<option value="mod">Модератори</option>
-								<option value="participant">Учасники</option>
-								<option value="user">Користувачі</option>
+							<select name="editing_rights" class="form-poshytip" title="Оберіть хто зможе редагувати інформацію про флешмоб"/>
+								<option value="organizer">Організатор</option>
+								<option value="main_moderators">Головні модератори</option>
+								<option value="moderators">Модератори</option>
 							</select>
 						</div>
 						<div>
 							<label>Додавання фотографій та документів, редагування етапів</label>
-							<select name="editrightsDoc" class="form-poshytip" title="Оберіть хто зможе додавати фотографії,документи та редагувати етапи"/>
-								<option value="superMod">Головні модератори</option>
-								<option value="mod">Модератори</option>
-								<option value="participant">Учасники</option>
-								<option value="user">Користувачі</option>
+							<select name="documents_rights" class="form-poshytip" title="Оберіть хто зможе додавати фотографії,документи та редагувати етапи"/>
+								<option value="organizer">Організатор</option>
+								<option value="main_moderators">Головні модератори</option>
+								<option value="moderators">Модератори</option>
 							</select>
 						</div>
 						<div>
 							<label>Запрошення нових учасників</label>
-							<select name="editrightsInv" class="form-poshytip" title="Оберіть хто зможе запрошувати нових учасників"/>
-								<option value="superMod">Головні модератори</option>
-								<option value="mod">Модератори</option>
-								<option value="participant">Учасники</option>
-								<option value="user">Користувачі</option>
+							<select name="invitation_rights" class="form-poshytip" title="Оберіть хто зможе запрошувати нових учасників"/>
+								<option value="organizer">Організатор</option>
+								<option value="main_moderators">Головні модератори</option>
+								<option value="moderators">Модератори</option>
 							</select>
 						</div>
 						<div>
