Fix select fields for commenting rights

--- a/views/flashmobs_create.ejs
+++ b/views/flashmobs_create.ejs
@@ -85,11 +85,12 @@
 						</div>
 						<div>
 							<label>Коментування</label>
-							<select name="editrightsCom" class="form-poshytip" title="Оберіть хто зможе залишати свої коментарі"/>
-								<option value="superMod">Головні модератори</option>
-								<option value="mod">Модератори</option>
-								<option value="participant">Учасники</option>
-								<option value="user">Користувачі</option>
+							<select name="commentin_rights" class="form-poshytip" title="Оберіть хто зможе залишати свої коментарі"/>
+								<option value="organizer">Організатор</option>
+								<option value="main_moderators">Головні модератори</option>
+								<option value="moderators">Модератори</option>
+								<option value="members">Учасники</option>
+								<option value="users">Користувачі</option>
 							</select>
 						</div>
 						<div>
