one letter, srsly

--- a/views/flashmobs_create.ejs
+++ b/views/flashmobs_create.ejs
@@ -85,7 +85,7 @@
 						</div>
 						<div>
 							<label>Коментування</label>
-							<select name="commentin_rights" class="form-poshytip" title="Оберіть хто зможе залишати свої коментарі"/>
+							<select name="commenting_rights" class="form-poshytip" title="Оберіть хто зможе залишати свої коментарі"/>
 								<option value="organizer">Організатор</option>
 								<option value="main_moderators">Головні модератори</option>
 								<option value="moderators">Модератори</option>
