--- a/public/css/style.css
+++ b/public/css/style.css
@@ -567,6 +567,7 @@ h6.header-line{
 	color: white;
 	font-size: 100%;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
+	cursor: pointer;
 }
 
 /* FILTER ------------------------------------------------------------*/
