Add створити флешмоб subtab in Флешмоби

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,6 +92,7 @@
                         <li><a href="flashmobs.html">Мої запрошення</a>
                         <li><a href="flashmobs.html">Минулі флешмоби</a>
                         <li><a href="flashmobs.html">Заплановані флешмоби</a>
+						<li><a href="flashmobs.html">Створити флешмоб</a>
                     </ul>
                 </li>
                 <li><a href="skins.html">МОЇ ПОВІДОМЛЕННЯ</a></li>
