--- a/views/flashmobPage.ejs
+++ b/views/flashmobPage.ejs
@@ -25,23 +25,23 @@
 
                 <!-- Single post -->
                 <div class="post single">
-                    <h1>Перший</h1>
+                    <h1 name = "title">Перший</h1>
                     <!-- meta -->
                     <ul class="meta">
-                        <li>Від <a href="#">Олексія</a>,&nbsp;</li>
-                        <li> 21.11.2014 о 15:00 &nbsp;</li>
+                        <li>Від <a href="#" name = "organizer">Олексія</a>,&nbsp;</li>
+                        <li name = "start_datetime"> 21.11.2014 о 15:00 &nbsp;</li>
                         <li> в <a href="#">м. Київ,</a>&nbsp;</li>
-                        <li> завершений,&nbsp;</li>
+                        <li name = "status"> завершений,&nbsp;</li>
                         <li> 10 коментарів&nbsp;</li>
                     </ul>
                     <!-- ENDS meta -->
                     <!-- feature image -->
                     <div class="feature-image">
-                        <img src="/img/dummies/584x300.jpg" alt="Feature image" />
+                        <img name = "main_image" src="/img/dummies/584x300.jpg" alt="Feature image" />
                     </div>
                     <!-- ENDS feature image -->
                     <!-- single post -->
-                    <div class="the-content">
+                    <div name = "full_description" class="the-content">
                         <p>Наступний флешмоб вражає своєю цікавою задумкою і простотою. З допомогою цього флешмобу компанія перевізник поздоровила свого водія. Ці сльози радості на його лиці варті цього.</p>
                         <p>Флешмоб - це заздалегідь спланована масова акція, зазвичай організована через Інтернет або інші сучасні засоби комунікації, у якій велика кількість людей оперативно збирається у громадському місці, протягом декількох хвилин виконує заздалегідь оговорені дії (сценарій), і потім швидко розходяться (wikipedia).</p>
                     </div>
